--- a/index.html
+++ b/index.html
@@ -153,6 +153,14 @@
               <li>Scaled large account relationships across India.</li>
             </ul>
           </article>
+          <article>
+            <h3>Business Development Manager</h3>
+            <p class="meta">Kalki Communication Technologies · Mar 1999 – Jan 2001 · Bengaluru</p>
+            <ul>
+              <li>Managed large accounts and drove business development initiatives in the industrial automation sector.</li>
+              <li>Collaborated with cross-functional teams to deliver customized software solutions and recruitment automation tools.</li>
+            </ul>
+          </article>
         </div>
       </section>
 
