Add contact image with clickable LinkedIn link in Contact section

--- a/index.html
+++ b/index.html
@@ -326,6 +326,10 @@
             <p class="form-status" role="alert" aria-live="polite"></p>
           </form>
         </div>
+        <div class="contact-image-wrapper">
+          <img src="contact.jpg" alt="Contact" class="contact-image" />
+          <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" class="contact-text-link" aria-label="Contact on LinkedIn"></a>
+        </div>
       </section>
     </main>
 
