Make entire contact image clickable with LinkedIn link

--- a/index.html
+++ b/index.html
@@ -327,8 +327,9 @@
           </form>
         </div>
         <div class="contact-image-wrapper">
-          <img src="contact.jpg" alt="Contact" class="contact-image" />
-          <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" class="contact-text-link" aria-label="Contact on LinkedIn"></a>
+          <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Contact on LinkedIn">
+            <img src="contact.jpg" alt="Contact" class="contact-image" />
+          </a>
         </div>
       </section>
     </main>
