Update job description for Senior Sales Director – Tech Cloud (South)

--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
             <h3>Senior Sales Director – Tech Cloud (South)</h3>
             <p class="meta">Oracle · Jun 2024 – Present · Bengaluru</p>
             <ul>
-              <li>Leading OCI sales + lifecycle across South India for enterprise and mid-market.</li>
-              <li>Driving IAAS/PAAS adoption with CX-focused retention and executive alignment.</li>
+              <li>Currently Spearheading the Cloud Infrastructure business for Oracle in South India, overseeing both Enterprise and Mid-Market segments.</li>
+              <li>Leading a dynamic team focused on sales and customer lifecycle management for IAAS and PAAS offerings.</li>
+              <li>Fostering strong client relationships, resulting in increase in customer retention and satisfaction scores.</li>
             </ul>
           </article>
           <article>
