Update job description for Senior Sales Director & Country Sales Head – Tech Cloud

--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
             <h3>Senior Sales Director & Country Sales Head – Tech Cloud</h3>
             <p class="meta">Oracle · Jun 2020 – May 2024 · Bengaluru</p>
             <ul>
-              <li>Scaled Commercial + Digital Native revenue nearly 10× from FY21–FY24.</li>
-              <li>President's Club Honoree 2022 for standout modernization wins.</li>
+              <li>Led the Cloud Infrastructure business for Oracle in India for the Commercial/Mid-Market Segment and Digital Native customers.</li>
+              <li>Achieved nearly 10x business growth from FY 2021 to 2024, consistently exceeding sales targets.</li>
+              <li>Recognised as part of the President's Club Honourees for 2022, reflecting exceptional performance and leadership.</li>
             </ul>
           </article>
           <article>
