Add missing Sales Director - Cloud Computing (West) experience entry

--- a/index.html
+++ b/index.html
@@ -124,6 +124,16 @@
             </ul>
           </article>
           <article>
+            <h3>Sales Director - Cloud Computing (West)</h3>
+            <p class="meta">Oracle · Aug 2019 – May 2020 · Bengaluru</p>
+            <ul>
+              <li>Led the Oracle Cloud Platform Mid-Market Sales Team across Maharashtra, Gujarat, and Goa, driving strategic growth.</li>
+              <li>Developed and executed sales strategies for Oracle's License, Cloud, and Engineered Systems offerings, enhancing market penetration.</li>
+              <li>Fostered strong relationships with key clients, resulting in increase in customer retention and satisfaction.</li>
+              <li>Mentored and trained team members, cultivating a high-performance sales culture that exceeded quarterly targets.</li>
+            </ul>
+          </article>
+          <article>
             <h3>Associate Director – APAC Sales, IBM Watson</h3>
             <p class="meta">IBM · Jul 2016 – Aug 2019 · Bengaluru</p>
             <ul>
