--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <a href="#certifications">Licenses</a>
         <a href="#skills">Skills</a>
         <a href="#recommendations">Recognition</a>
+        <a href="#featured">Featured</a>
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
       </nav>
@@ -268,6 +269,41 @@
             <h3>IBM Sales Eminence & Bravo Awards</h3>
             <p>Celebrated for standout execution in 2006, 2007, 2012.</p>
           </article>
+        </div>
+      </section>
+
+      <section id="featured" class="panel">
+        <header>
+          <p class="eyebrow">Featured</p>
+          <h2>Industry Insights & Thought Leadership</h2>
+        </header>
+        <div>
+          <p>
+            I regularly share my perspectives on how technology, cloud infrastructure, and data protection are reshaping financial services and enabling businesses to scale with confidence. My insights have been featured across leading industry publications, focusing on NBFC transformation, fintech innovation, regulatory readiness, and technology-led growth.
+          </p>
+          <h3 style="margin-top: 2rem; margin-bottom: 1rem;">Selected Features & Articles:</h3>
+          <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.ciotechoutlook.com/cxoinsight/regulatory-implications-and-data-protection-how-nbfcs-adapt-with-it-solutions-nid-11121-cid-12.html" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                Regulatory Implications and Data Protection: How NBFCs Adapt with IT Solutions
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.dqindia.com/smbs-can-now-adopt-grow-and-scale-up-like-never-before/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                SMBs Can Now Adopt, Grow and Scale Up Like Never Before
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.ciol.com/straight-talk/transforming-fintech-with-oracle-cloud-infrastructure-oci-7591296" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                Transforming Fintech with Oracle Cloud Infrastructure (OCI)
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://bfsi.eletsonline.com/nbfcs-need-to-embrace-technologies-to-be-competitive-in-the-market/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                NBFCs Need to Embrace Technologies to Stay Competitive
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
