Add LinkedIn profile link to featured image

--- a/index.html
+++ b/index.html
@@ -307,7 +307,9 @@
             </ul>
           </div>
           <div class="about-media">
-            <img src="shabeer_featured.png" alt="Shabeer Mohamed featured in industry publications" />
+            <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Visit Shabeer Mohamed's LinkedIn profile">
+              <img src="shabeer_featured.png" alt="Shabeer Mohamed featured in industry publications" />
+            </a>
           </div>
         </div>
       </section>
