--- a/index.html
+++ b/index.html
@@ -352,11 +352,18 @@
           <p>Reach out for cloud innovation, GTM strategy, or advisory collaborations.</p>
         </header>
         <div class="contact-grid">
-          <div class="cta-buttons">
-            <a class="btn primary" href="mailto:shabeer.kozhakkaniyil@oracle.com">Email Shabeer</a>
-            <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
-              LinkedIn Profile
-            </a>
+          <div style="display: flex; flex-direction: column; gap: 1.5rem;">
+            <div class="cta-buttons">
+              <a class="btn primary" href="mailto:shabeer.kozhakkaniyil@oracle.com">Email Shabeer</a>
+              <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
+                LinkedIn Profile
+              </a>
+            </div>
+            <div class="contact-image-wrapper" style="margin-top: 0;">
+              <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Contact on LinkedIn">
+                <img src="contact.jpg" alt="Contact" class="contact-image" style="max-width: 300px; width: 100%;" />
+              </a>
+            </div>
           </div>
           <form id="contact-form" action="https://formspree.io/f/xdkbrond" method="POST" novalidate>
             <label>
@@ -375,11 +382,6 @@
             <button type="submit" class="btn primary">Send Message</button>
             <p class="form-status" role="alert" aria-live="polite"></p>
           </form>
-        </div>
-        <div class="contact-image-wrapper">
-          <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Contact on LinkedIn">
-            <img src="contact.jpg" alt="Contact" class="contact-image" />
-          </a>
         </div>
       </section>
     </main>
