--- a/index.html
+++ b/index.html
@@ -359,9 +359,9 @@
                 LinkedIn Profile
               </a>
             </div>
-            <div class="contact-image-wrapper" style="margin-top: 0;">
+            <div class="contact-image-wrapper" style="margin-top: 0; align-self: flex-start;">
               <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Contact on LinkedIn">
-                <img src="contact.jpg" alt="Contact" class="contact-image" style="max-width: 300px; width: 100%;" />
+                <img src="contact.jpg" alt="Contact" class="contact-image" style="max-width: 450px; width: 100%;" />
               </a>
             </div>
           </div>
