Adjust contact image position: move down 0.5in and center align with LinkedIn button

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 LinkedIn Profile
               </a>
             </div>
-            <div class="contact-image-wrapper" style="margin-top: 0; align-self: flex-start;">
+            <div class="contact-image-wrapper" style="margin-top: 0.5in; align-self: center;">
               <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Contact on LinkedIn">
                 <img src="contact.jpg" alt="Contact" class="contact-image" style="max-width: 450px; width: 100%;" />
               </a>
