Reduce hero heading font size to prevent text overlap with photo

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section id="hero" class="hero">
         <div class="hero-text">
           <p class="eyebrow">Bold GTM Leadership · Cloud · AI</p>
-          <h1>Driving Enterprise Cloud Transformation Across APAC</h1>
+          <h1 style="font-size: clamp(2.3rem, 3.8vw, 3.5rem);">Driving Enterprise Cloud Transformation Across APAC</h1>
           <p class="subtitle">
             Senior sales leader with 25+ years delivering double-digit growth for Oracle,
             IBM, Novell & Aptech by aligning business strategy with modern cloud outcomes.
