Reposition About.png as hero image under heading with larger size

--- a/index.html
+++ b/index.html
@@ -66,37 +66,35 @@
           <p class="eyebrow">About</p>
           <h2>Accelerating Cloud Adoption with Strategy-Led Execution</h2>
         </header>
-        <div class="about-wrapper">
-          <div class="about-media">
-            <img src="About.png" alt="Shabeer Mohamed collaborating with enterprise clients" />
-          </div>
-          <div class="about-content">
-            <p>
-              With over 25 years across Oracle, IBM, Novell, and Aptech, I’ve helped organizations navigate the most pivotal shifts in enterprise IT.
-              At Oracle, I lead high-impact teams driving digital transformation for India’s top enterprises—modernizing, migrating, and maximizing ROI
-              across the full OCI portfolio (IaaS & PaaS), including Autonomous Database, Cloud Data Lakehouses, and High-Performance Computing.
-            </p>
-            <p>
-              My core strength lies in aligning business strategy with technology outcomes. I’ve enabled mission-critical cloud migrations, scaled complex
-              sales operations, and delivered consistent value across industries by focusing on both client success and sustainable innovation.
-              Previously, as part of IBM Watson Customer Engagement’s APAC Leadership Team, I spearheaded Commercial Segment Sales across Australia,
-              ASEAN, Korea, and India/South Asia—partnering with top-tier sales, consulting, and technical teams to advance AI-driven customer engagement.
-            </p>
-            <p>
-              Across software, hardware, and cloud (IaaS/PaaS/SaaS), I’ve led high-performing teams in large account management, sales operations,
-              and territory management. Highlights include:
-            </p>
-            <ul class="about-list">
-              <li>Consistent double-digit revenue growth</li>
-              <li>Single-digit attrition in competitive markets</li>
-              <li>Multiple Best Leader/Manager accolades</li>
-            </ul>
-            <p>
-              Industry expertise spans BFSI, Pharma, Defense/Academia, Manufacturing, Retail, and Development Houses. I’m passionate about scaling cloud
-              adoption, mentoring talent, and delivering transformative business outcomes. Let’s connect if you’re exploring cloud innovation, AI,
-              or enterprise sales strategies.
-            </p>
-          </div>
+        <div class="about-media" style="margin: 2rem auto 3rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
+          <img src="About.png" alt="Shabeer Mohamed collaborating with enterprise clients" style="width: 100%; max-width: 800px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4);" />
+        </div>
+        <div class="about-content">
+          <p>
+            With over 25 years across Oracle, IBM, Novell, and Aptech, I've helped organizations navigate the most pivotal shifts in enterprise IT.
+            At Oracle, I lead high-impact teams driving digital transformation for India's top enterprises—modernizing, migrating, and maximizing ROI
+            across the full OCI portfolio (IaaS & PaaS), including Autonomous Database, Cloud Data Lakehouses, and High-Performance Computing.
+          </p>
+          <p>
+            My core strength lies in aligning business strategy with technology outcomes. I've enabled mission-critical cloud migrations, scaled complex
+            sales operations, and delivered consistent value across industries by focusing on both client success and sustainable innovation.
+            Previously, as part of IBM Watson Customer Engagement's APAC Leadership Team, I spearheaded Commercial Segment Sales across Australia,
+            ASEAN, Korea, and India/South Asia—partnering with top-tier sales, consulting, and technical teams to advance AI-driven customer engagement.
+          </p>
+          <p>
+            Across software, hardware, and cloud (IaaS/PaaS/SaaS), I've led high-performing teams in large account management, sales operations,
+            and territory management. Highlights include:
+          </p>
+          <ul class="about-list">
+            <li>Consistent double-digit revenue growth</li>
+            <li>Single-digit attrition in competitive markets</li>
+            <li>Multiple Best Leader/Manager accolades</li>
+          </ul>
+          <p>
+            Industry expertise spans BFSI, Pharma, Defense/Academia, Manufacturing, Retail, and Development Houses. I'm passionate about scaling cloud
+            adoption, mentoring talent, and delivering transformative business outcomes. Let's connect if you're exploring cloud innovation, AI,
+            or enterprise sales strategies.
+          </p>
         </div>
       </section>
 
