Fix mobile alignment for featured image - position below heading in mobile view

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           <p class="eyebrow">Featured</p>
           <h2>Industry Insights & Thought Leadership</h2>
         </header>
-        <div class="about-wrapper" style="grid-template-columns: 1fr auto;">
+        <div class="about-wrapper featured-wrapper" style="grid-template-columns: 1fr auto;">
           <div>
             <p>
               I regularly share my perspectives on how technology, cloud infrastructure, and data protection are reshaping financial services and enabling businesses to scale with confidence. My insights have been featured across leading industry publications, focusing on NBFC transformation, fintech innovation, regulatory readiness, and technology-led growth.
