Align shabeer_featured.png same as About.png - hero image style with consistent sizing and alignment across all devices

--- a/index.html
+++ b/index.html
@@ -275,40 +275,38 @@
           <p class="eyebrow">Featured</p>
           <h2>Industry Insights & Thought Leadership</h2>
         </header>
-        <div class="about-wrapper featured-wrapper" style="grid-template-columns: 1fr auto;">
-          <div>
-            <p>
-              I regularly share my perspectives on how technology, cloud infrastructure, and data protection are reshaping financial services and enabling businesses to scale with confidence. My insights have been featured across leading industry publications, focusing on NBFC transformation, fintech innovation, regulatory readiness, and technology-led growth.
-            </p>
-            <h3 style="margin-top: 2rem; margin-bottom: 1rem;">Selected Features & Articles:</h3>
-            <ul style="list-style: none; padding: 0; margin: 0;">
-              <li style="margin-bottom: 1.25rem;">
-                <a href="https://www.ciotechoutlook.com/cxoinsight/regulatory-implications-and-data-protection-how-nbfcs-adapt-with-it-solutions-nid-11121-cid-12.html" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
-                  Regulatory Implications and Data Protection: How NBFCs Adapt with IT Solutions
-                </a>
-              </li>
-              <li style="margin-bottom: 1.25rem;">
-                <a href="https://www.dqindia.com/smbs-can-now-adopt-grow-and-scale-up-like-never-before/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
-                  SMBs Can Now Adopt, Grow and Scale Up Like Never Before
-                </a>
-              </li>
-              <li style="margin-bottom: 1.25rem;">
-                <a href="https://www.ciol.com/straight-talk/transforming-fintech-with-oracle-cloud-infrastructure-oci-7591296" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
-                  Transforming Fintech with Oracle Cloud Infrastructure (OCI)
-                </a>
-              </li>
-              <li style="margin-bottom: 1.25rem;">
-                <a href="https://bfsi.eletsonline.com/nbfcs-need-to-embrace-technologies-to-be-competitive-in-the-market/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
-                  NBFCs Need to Embrace Technologies to Stay Competitive
-                </a>
-              </li>
-            </ul>
-          </div>
-          <div class="about-media">
-            <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Visit Shabeer Mohamed's LinkedIn profile">
-              <img src="shabeer_featured.png" alt="Shabeer Mohamed featured in industry publications" />
-            </a>
-          </div>
+        <div class="about-media" style="margin: 2rem auto 3rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
+          <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Visit Shabeer Mohamed's LinkedIn profile">
+            <img src="shabeer_featured.png" alt="Shabeer Mohamed featured in industry publications" style="width: 100%; max-width: 800px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4);" />
+          </a>
+        </div>
+        <div>
+          <p>
+            I regularly share my perspectives on how technology, cloud infrastructure, and data protection are reshaping financial services and enabling businesses to scale with confidence. My insights have been featured across leading industry publications, focusing on NBFC transformation, fintech innovation, regulatory readiness, and technology-led growth.
+          </p>
+          <h3 style="margin-top: 2rem; margin-bottom: 1rem;">Selected Features & Articles:</h3>
+          <ul style="list-style: none; padding: 0; margin: 0;">
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.ciotechoutlook.com/cxoinsight/regulatory-implications-and-data-protection-how-nbfcs-adapt-with-it-solutions-nid-11121-cid-12.html" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                Regulatory Implications and Data Protection: How NBFCs Adapt with IT Solutions
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.dqindia.com/smbs-can-now-adopt-grow-and-scale-up-like-never-before/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                SMBs Can Now Adopt, Grow and Scale Up Like Never Before
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://www.ciol.com/straight-talk/transforming-fintech-with-oracle-cloud-infrastructure-oci-7591296" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                Transforming Fintech with Oracle Cloud Infrastructure (OCI)
+              </a>
+            </li>
+            <li style="margin-bottom: 1.25rem;">
+              <a href="https://bfsi.eletsonline.com/nbfcs-need-to-embrace-technologies-to-be-competitive-in-the-market/" target="_blank" rel="noreferrer" style="color: var(--accent-alt); text-decoration: none; border-bottom: 1px solid var(--accent-alt); transition: opacity 0.3s ease; display: inline-block;">
+                NBFCs Need to Embrace Technologies to Stay Competitive
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
