--- a/index.html
+++ b/index.html
@@ -339,6 +339,36 @@
           </div>
           <span class="tag">Market Research</span>
         </article>
+        <article class="project-card">
+          <div>
+            <h3>Strategic Leadership | Board Advisory | Entrepreneurship</h3>
+            <p>
+              I have been privileged to serve as an Independent Honorary Director for multiple high-growth organizations, invited to their boards in recognition of my industry eminence, entrepreneurial depth, and leadership experience. In these roles, I work closely with founders and leadership teams to shape strategy, accelerate execution, and build scalable, future-ready businesses.
+            </p>
+            <h4 style="margin-top: 1.5rem; margin-bottom: 1rem;">Board & Strategic Advisory Roles</h4>
+            <ul style="margin-bottom: 1.5rem;">
+              <li><strong>Rayenna Energy</strong> - A renewable energy solutions company driving sustainability through solar and clean-energy initiatives.</li>
+              <li><strong>Aroos Al Mohit</strong> - A diversified trading and logistics enterprise serving regional and international markets.</li>
+              <li><strong>Abra Al Arab</strong> - An energy and commodities trading firm focused on crude oil and refined petroleum products across global corridors.</li>
+            </ul>
+            <p style="margin-bottom: 1rem;">
+              Across these engagements, I actively guide leadership teams across the entire business lifecycle, including:
+            </p>
+            <ul style="margin-bottom: 1.5rem;">
+              <li>Strategic Business Planning & Go-To-Market Strategy</li>
+              <li>Defining Vision, Mission & Corporate Identity</li>
+              <li>Marketing, Sales Planning & Revenue Acceleration</li>
+              <li>Operational Structuring & Governance</li>
+              <li>Branding, Digital Presence & Website Strategy</li>
+              <li>Sales quota design, performance frameworks & leadership mentoring</li>
+              <li>Organizational design, HR strategy & culture building</li>
+            </ul>
+            <p>
+              With deep hands-on experience in entrepreneurship and business building, I bring a rare blend of strategic foresight and executional rigor—helping organizations move from vision to velocity, and from scale-up to sustainable growth.
+            </p>
+          </div>
+          <span class="tag">Strategic Advisory</span>
+        </article>
       </section>
 
       <section id="contact" class="panel contact">
