Add hero_banner.png with responsive styling to Strategic Leadership section

--- a/index.html
+++ b/index.html
@@ -318,6 +318,9 @@
         <article class="project-card">
           <div>
             <h3>Strategic Leadership | Board Advisory | Entrepreneurship</h3>
+            <div class="project-banner" style="margin: 1.5rem auto 2rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
+              <img src="hero_banner.png" alt="Strategic Leadership and Board Advisory" style="width: 100%; max-width: 900px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4); object-fit: contain;" />
+            </div>
             <p>
               I have been privileged to serve as an Independent Honorary Director for multiple high-growth organizations, invited to their boards in recognition of my industry eminence, entrepreneurial depth, and leadership experience. In these roles, I work closely with founders and leadership teams to shape strategy, accelerate execution, and build scalable, future-ready businesses.
             </p>
