Add hyperlinks to Rayenna Energy and Aroos Al Mohit with hover styling

--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
             </p>
             <h4 style="margin-top: 1.5rem; margin-bottom: 1rem;">Board & Strategic Advisory Roles</h4>
             <ul style="margin-bottom: 1.5rem;">
-              <li><strong>Rayenna Energy</strong> - A renewable energy solutions company driving sustainability through solar and clean-energy initiatives.</li>
-              <li><strong>Aroos Al Mohit</strong> - A diversified trading and logistics enterprise serving regional and international markets.</li>
+              <li><strong><a href="https://rayenna.energy/" target="_blank" rel="noreferrer">Rayenna Energy</a></strong> - A renewable energy solutions company driving sustainability through solar and clean-energy initiatives.</li>
+              <li><strong><a href="https://aroosalmohit.com/" target="_blank" rel="noreferrer">Aroos Al Mohit</a></strong> - A diversified trading and logistics enterprise serving regional and international markets.</li>
               <li><strong>Abra Al Arab</strong> - An energy and commodities trading firm focused on crude oil and refined petroleum products across global corridors.</li>
             </ul>
             <p style="margin-bottom: 1rem;">
