Add PDF download functionality with button in footer

--- a/index.html
+++ b/index.html
@@ -417,8 +417,12 @@
 
     <footer class="site-footer">
       <p>© <span id="year"></span> Shabeer Mohamed. Built bold & colorful.</p>
+      <button id="download-pdf" class="btn primary" style="margin-top: 1.5rem;">
+        📄 Download as PDF
+      </button>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <script src="script.js" defer></script>
   </body>
 </html>
