Update email address to shabeer_mk@outlook.com

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             IBM, Novell & Aptech by aligning business strategy with modern cloud outcomes.
           </p>
           <div class="hero-ctas">
-            <a class="btn primary" href="mailto:shabeer.kozhakkaniyil@oracle.com">Email Shabeer</a>
+            <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
             <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
               Connect on LinkedIn
             </a>
@@ -383,7 +383,7 @@
         <div class="contact-grid">
           <div style="display: flex; flex-direction: column; gap: 1.5rem;">
             <div class="cta-buttons">
-              <a class="btn primary" href="mailto:shabeer.kozhakkaniyil@oracle.com">Email Shabeer</a>
+              <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
               <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
                 LinkedIn Profile
               </a>
