Fix contact form: add _replyto field, improve error handling and response parsing

--- a/index.html
+++ b/index.html
@@ -407,7 +407,9 @@
               Message
               <textarea name="message" rows="4" required></textarea>
             </label>
-            <input type="hidden" name="_subject" value="Portfolio Contact" />
+            <input type="hidden" name="_subject" value="Portfolio Contact Form" />
+            <input type="hidden" name="_replyto" value="" />
+            <input type="hidden" name="_next" value="" />
             <button type="submit" class="btn primary">Send Message</button>
             <p class="form-status" role="alert" aria-live="polite"></p>
           </form>
