Move PDF download button to hero section next to Email button with responsive styling

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           </p>
           <div class="hero-ctas">
             <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
+            <button id="download-pdf" class="btn primary">📄 Download as PDF</button>
             <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
               Connect on LinkedIn
             </a>
@@ -419,9 +420,6 @@
 
     <footer class="site-footer">
       <p>© <span id="year"></span> Shabeer Mohamed. Built bold & colorful.</p>
-      <button id="download-pdf" class="btn primary" style="margin-top: 1.5rem;">
-        📄 Download as PDF
-      </button>
     </footer>
 
     <script src="script.js"></script>
