Restore bullet list in Strategic Leadership section, replacing skills.png image

--- a/index.html
+++ b/index.html
@@ -331,12 +331,18 @@
               <li><strong><a href="https://aroosalmohit.com/" target="_blank" rel="noreferrer">Aroos Al Mohit</a></strong> - A diversified trading and logistics enterprise serving regional and international markets.</li>
               <li><strong>Abra Al Arab</strong> - An energy and commodities trading firm focused on crude oil and refined petroleum products across global corridors.</li>
             </ul>
-            <p style="margin-bottom: 1.5rem;">
+            <p style="margin-bottom: 1rem;">
               Across these engagements, I actively guide leadership teams across the entire business lifecycle, including:
             </p>
-            <div class="skills-image" style="margin: 1.5rem auto 2rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
-              <img src="skills.png" alt="Strategic Leadership Services and Skills" style="width: 100%; max-width: 900px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4); object-fit: contain;" />
-            </div>
+            <ul style="margin-bottom: 1.5rem;">
+              <li>Strategic Business Planning & Go-To-Market Strategy</li>
+              <li>Defining Vision, Mission & Corporate Identity</li>
+              <li>Marketing, Sales Planning & Revenue Acceleration</li>
+              <li>Operational Structuring & Governance</li>
+              <li>Branding, Digital Presence & Website Strategy</li>
+              <li>Sales quota design, performance frameworks & leadership mentoring</li>
+              <li>Organizational design, HR strategy & culture building</li>
+            </ul>
             <p>
               With deep hands-on experience in entrepreneurship and business building, I bring a rare blend of strategic foresight and executional rigor—helping organizations move from vision to velocity, and from scale-up to sustainable growth.
             </p>
