Add slideshow banner at top of Hero section with 6 images, auto-play, and responsive design

--- a/index.html
+++ b/index.html
@@ -36,29 +36,63 @@
 
     <main>
       <section id="hero" class="hero">
-        <div class="hero-text">
-          <p class="eyebrow">Bold GTM Leadership · Cloud · AI</p>
-          <h1 style="font-size: clamp(2.3rem, 3.8vw, 3.5rem);">Driving Enterprise Cloud Transformation Across APAC</h1>
-          <p class="subtitle">
-            Senior sales leader with 25+ years delivering double-digit growth for Oracle,
-            IBM, Novell & Aptech by aligning business strategy with modern cloud outcomes.
-          </p>
-          <div class="hero-ctas">
-            <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
-            <button id="download-pdf" class="btn primary">📄 Download as PDF</button>
-            <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
-              Connect on LinkedIn
-            </a>
+        <div class="hero-banner-slideshow">
+          <div class="slideshow-container">
+            <div class="slide active">
+              <img src="banner1.jpeg" alt="Banner 1" />
+            </div>
+            <div class="slide">
+              <img src="banner2.jpeg" alt="Banner 2" />
+            </div>
+            <div class="slide">
+              <img src="banner3.jpeg" alt="Banner 3" />
+            </div>
+            <div class="slide">
+              <img src="banner4.jpeg" alt="Banner 4" />
+            </div>
+            <div class="slide">
+              <img src="banner5.jpeg" alt="Banner 5" />
+            </div>
+            <div class="slide">
+              <img src="banner6.jpeg" alt="Banner 6" />
+            </div>
+            <button class="slideshow-prev" aria-label="Previous slide">&#10094;</button>
+            <button class="slideshow-next" aria-label="Next slide">&#10095;</button>
+            <div class="slideshow-dots">
+              <span class="dot active" data-slide="0"></span>
+              <span class="dot" data-slide="1"></span>
+              <span class="dot" data-slide="2"></span>
+              <span class="dot" data-slide="3"></span>
+              <span class="dot" data-slide="4"></span>
+              <span class="dot" data-slide="5"></span>
+            </div>
           </div>
         </div>
-        <div class="hero-photo">
-          <img src="profile-photo.jpg" alt="Shabeer Mohamed" />
-        </div>
-        <div class="hero-highlight">
-          <span>25+ yrs</span>
-          <p>Enterprise GTM leadership</p>
-          <span>10x</span>
-          <p>Growth FY21–FY24 (Oracle)</p>
+        <div class="hero-content">
+          <div class="hero-text">
+            <p class="eyebrow">Bold GTM Leadership · Cloud · AI</p>
+            <h1 style="font-size: clamp(2.3rem, 3.8vw, 3.5rem);">Driving Enterprise Cloud Transformation Across APAC</h1>
+            <p class="subtitle">
+              Senior sales leader with 25+ years delivering double-digit growth for Oracle,
+              IBM, Novell & Aptech by aligning business strategy with modern cloud outcomes.
+            </p>
+            <div class="hero-ctas">
+              <a class="btn primary" href="mailto:shabeer_mk@outlook.com">Email Shabeer</a>
+              <button id="download-pdf" class="btn primary">📄 Download as PDF</button>
+              <a class="btn secondary" href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer">
+                Connect on LinkedIn
+              </a>
+            </div>
+          </div>
+          <div class="hero-photo">
+            <img src="profile-photo.jpg" alt="Shabeer Mohamed" />
+          </div>
+          <div class="hero-highlight">
+            <span>25+ yrs</span>
+            <p>Enterprise GTM leadership</p>
+            <span>10x</span>
+            <p>Growth FY21–FY24 (Oracle)</p>
+          </div>
         </div>
       </section>
 
