--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </header>
         <div class="about-media" style="margin: 2rem auto 3rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
           <a href="https://www.linkedin.com/in/shabeermohamed/" target="_blank" rel="noreferrer" aria-label="Visit Shabeer Mohamed's LinkedIn profile">
-            <img src="shabeer_featured.png" alt="Shabeer Mohamed featured in industry publications" style="width: 100%; max-width: 800px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4);" />
+            <img src="featured.png" alt="Shabeer Mohamed featured in industry publications" style="width: 100%; max-width: 800px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4);" />
           </a>
         </div>
         <div>
