--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
           <p class="eyebrow">About</p>
           <h2>Accelerating Cloud Adoption with Strategy-Led Execution</h2>
         </header>
-        <div class="about-media" style="margin: 2rem auto 3rem; max-width: 100%; display: flex; justify-content: center; align-items: center;">
-          <img src="About.png" alt="Shabeer Mohamed collaborating with enterprise clients" style="width: 100%; max-width: 800px; height: auto; border-radius: calc(var(--radius) * 1.1); border: 3px solid transparent; background: linear-gradient(var(--card), var(--card)) padding-box, linear-gradient(135deg, var(--accent), var(--accent-alt)) border-box; box-shadow: 0 25px 50px rgba(5, 1, 20, 0.4);" />
-        </div>
-        <div class="about-content">
+        <div class="about-wrapper">
+          <div class="about-media">
+            <img src="About.png" alt="Shabeer Mohamed collaborating with enterprise clients" />
+          </div>
+          <div class="about-content">
           <p>
             With over 25 years across Oracle, IBM, Novell, and Aptech, I've helped organizations navigate the most pivotal shifts in enterprise IT.
             At Oracle, I lead high-impact teams driving digital transformation for India's top enterprises—modernizing, migrating, and maximizing ROI
@@ -130,6 +131,7 @@
             adoption, mentoring talent, and delivering transformative business outcomes. Let's connect if you're exploring cloud innovation, AI,
             or enterprise sales strategies.
           </p>
+          </div>
         </div>
       </section>
 
