Improve text wrapping around About.png image and add spacing before Highlights include in laptop view

--- a/index.html
+++ b/index.html
@@ -119,7 +119,10 @@
           </p>
           <p>
             Across software, hardware, and cloud (IaaS/PaaS/SaaS), I've led high-performing teams in large account management, sales operations,
-            and territory management. Highlights include:
+            and territory management.
+          </p>
+          <p class="highlights-intro">
+            Highlights include:
           </p>
           <ul class="about-list">
             <li>Consistent double-digit revenue growth</li>
